--- a/macos/doom/config.org
+++ b/macos/doom/config.org
@@ -1,21 +1,64 @@
+#+TITLE: DOOM EMACS CONFIG
+#+DESCRIPTION: Configuration file for Doom Emacs
+#+AUTHOR: s.takoor
+#+PROPERTY: header-args :tangle config.el
+#+auto_tangle: t
+#+STARTUP: showeverything
+
+* TABLE OF CONTENTS :toc:
+  - [[#overview][OVERVIEW]]
+  - [[#about][ABOUT]]
+  - [[#fonts][FONTS]]
+  - [[#themes][THEMES]]
+  - [[#line-numbers][LINE NUMBERS]]
+  - [[#org-directory][ORG DIRECTORY]]
+  - [[#all-the-icon][ALL-THE-ICON]]
+  - [[#latex][LATEX]]
+  - [[#language-server-protocol-lsp][LANGUAGE SERVER PROTOCOL (LSP)]]
+  - [[#beacon][BEACON]]
+  - [[#org-auto-tangle][ORG-AUTO-TANGLE]]
+
+** OVERVIEW
+Personal DOOM EMACS config
+
+** ABOUT
+#+begin_src emacs-lisp
 (setq user-full-name "Shashiduth Takoor"
       user-mail-address "shashiduth.takoor@gmail.com")
+#+end_src
 
+** FONTS
+#+begin_src emacs-lisp
 (setq doom-font (font-spec :family "Iosevka Nerd Font" :size 12 :weight 'semi-light)
       doom-variable-pitch-font (font-spec :family "Iosevka Nerd Font" :size 13))
+#+end_src
 
+** THEMES
+#+begin_src emacs-lisp
 (setq doom-theme 'doom-zenburn)
 (setq zenburn-use-variable-pitch t)
 (setq zenburn-scale-org-headlines t)
 (setq zenburn-scale-outline-headlines t)
+#+end_src
 
+** LINE NUMBERS
+#+begin_src emacs-lisp
 (setq display-line-numbers-type t)
+#+end_src
 
+** ORG DIRECTORY
+#+begin_src emacs-lisp
 (setq org-directory "~/Documents/org/")
+#+end_src
 
+** ALL-THE-ICON
+#+begin_src emacs-lisp
 (all-the-icons-completion-mode)
 (add-hook 'marginalia-mode-hook #' all-the-icons-completion-marginalia-setup)
+#+end_src
 
+** LATEX
+#+begin_src emacs-lisp
 (require 'ox-latex)
 (with-eval-after-load 'ox-latex
   (add-to-list 'org-latex-classes
@@ -31,7 +74,11 @@
 
 ;; Pagebreak for table of contents
 (setq org-latex-toc-command "\\tableofcontents \\clearpage")
+#+end_src
 
+** LANGUAGE SERVER PROTOCOL (LSP)
+*** Corfu completion module
+#+begin_src emacs-lisp
 (add-hook 'doom-init-modules-hook
           (lambda ()
             (after! lsp-mode
@@ -119,11 +166,19 @@
 (when (equal tab-always-indent 'complete)
   (map! :map c-mode-base-map
         :i [remap c-indent-line-or-region] #'completion-at-point))
+#+end_src
 
+** BEACON
+#+begin_src emacs-lisp
 (beacon-mode 1)
+#+end_src
 
+** ORG-AUTO-TANGLE
+Automatically tangle when saving ~.org~ files
+#+begin_src emacs-lisp
 (use-package! org-auto-tangle
   :defer t
   :hook (org-mode . org-auto-tangle-mode)
   :config
   (setq org-auto-tangle-default t))
+#+end_src
