--- a/macos/doom/config.org
+++ b/macos/doom/config.org
@@ -19,7 +19,13 @@
   - [[#org-auto-tangle][ORG-AUTO-TANGLE]]
   - [[#environment-variables-for-mac][ENVIRONMENT VARIABLES FOR MAC]]
   - [[#flycheck][FLYCHECK]]
-  - [[#completion][COMPLETION]]
+  - [[#completion-in-region-with-corfu][COMPLETION IN REGION WITH CORFU]]
+  - [[#completion-at-point-extension-with-cape][COMPLETION AT POINT EXTENSION WITH CAPE]]
+  - [[#icons-for-completion][ICONS FOR COMPLETION]]
+  - [[#completion-annotations-with-marginalia--completion-actions-with-embark][COMPLETION ANNOTATIONS WITH MARGINALIA | COMPLETION ACTIONS WITH EMBARK]]
+  - [[#vertico][VERTICO]]
+  - [[#lsp-mode-with-corfu][LSP-MODE WITH CORFU]]
+  - [[#minibuffer][MINIBUFFER]]
   - [[#latex][LATEX]]
 
 ** TL;DR
@@ -47,8 +53,8 @@ Personal DOOM EMACS config
 
 ** ALL-THE-ICON
 #+begin_src emacs-lisp
-;;(all-the-icons-completion-mode)
-;;(add-hook 'marginalia-mode-hook #' all-the-icons-completion-marginalia-setup)
+(all-the-icons-completion-mode)
+(add-hook 'marginalia-mode-hook #' all-the-icons-completion-marginalia-setup)
 #+end_src
 
 ** DASHBOARD
@@ -74,7 +80,13 @@ Personal DOOM EMACS config
 
 ** ORG DIRECTORY
 #+begin_src emacs-lisp
-(setq org-directory "~/Documents/org/")
+(setq org-directory "~/Documents/OrgFiles/"
+      org-agenda-files '("~/Documents/OrgFiles/agenda.org"))
+(setq org-agenda-block-separator 45)
+
+(setq org-src-preserve-indentation nil
+      org-src-tab-acts-natively t
+      org-edit-src-content-indentation 0)
 #+end_src
 
 ** ORG-AUTO-TANGLE
@@ -89,6 +101,9 @@ Automatically tangle when saving ~.org~ files
 
 ** ENVIRONMENT VARIABLES FOR MAC
 #+begin_src emacs-lisp
+(use-package exec-path-from-shell
+  :ensure t)
+
 ;; Emacs GUI frame
 (when (memq window-system '(mac ns x))
   (exec-path-from-shell-initialize))
@@ -105,50 +120,8 @@ Automatically tangle when saving ~.org~ files
   :init (global-flycheck-mode))
 #+end_src
 
-** COMPLETION
-*** LSP SETUP CORFU COMPLETION
+** COMPLETION IN REGION WITH CORFU
 #+begin_src emacs-lisp
-(use-package lsp-ui
-  :ensure t
-  :after lsp
-  :init
-  (setq lsp-ui-sideline-show-code-actions t)
-  (setq lsp-ui-sideline-show-diagnostics t))
-
-(add-hook 'doom-init-modules-hook
-          (lambda ()
-            (after! lsp-mode
-              (setq lsp-completion-provider :none))))
-
-;; Pad before lsp modeline error info
-(add-hook 'lsp-mode-hook
-          (lambda ()
-            (setf (caadr
-                   (assq 'global-mode-string mode-line-misc-info))
-                  " ")))
-
-;; Set orderless filtering for LSP-mode completions
-(add-hook 'lsp-completion-mode-hook
-          (lambda ()
-            (setf (alist-get 'lsp-capf completion-category-defaults) '((styles . (orderless))))))
-
-;; Set bindings
-(map! :i "C-@" #'completion-at-point
-      :i "C-SPC" #'completion-at-point
-      (:prefix "C-x"
-       :i "C-k" #'cape-dict
-       :i "C-f" #'cape-file
-       :i "s" #'cape-ispell
-       :i "C-n" #'cape-keyword
-       :i "C-s" #'dabbrev-completion))
-
-;; Fallback cleanly to consult in TUI
-(setq-default completion-in-region-function #'consult-completion-in-region)
-
-(use-package vertico
-  :init (vertico-mode)
-  (setq vertico-cycle t))
-
 (use-package corfu
   :custom
   (corfu-cycle t)
@@ -156,8 +129,8 @@ Automatically tangle when saving ~.org~ files
   (corfu-auto-prefix 2)
   (corfu-auto-delay 0.0)
   (corfu-echo-documentation 0.25)
-  (corfu-separator ?\s)          ;; Orderless field separator
-  (corfu-preview-current nil)    ;; Disable current candidate preview
+  (corfu-separator ?\s)
+  (corfu-preview-current 'insert)
   (corfu-on-exact-match nil)
   (corfu-quit-no-match 'separator)
   (corfu-preselect-first nil)
@@ -168,58 +141,82 @@ Automatically tangle when saving ~.org~ files
          ("TAB" . corfu-next)
          ([tab] . corfu-next)
          ("S-TAB" . corfu-previous)
-         ([backtab] . corfu-previous))
+         ([backtab] . corfu-previous)
+         ("S-<return>" . corfu-insert)
+         ("RET" . nil))
   :init
   (global-corfu-mode))
+#+end_src
 
-(use-package orderless
-  :when (featurep! +orderless)
+** COMPLETION AT POINT EXTENSION WITH CAPE
+#+begin_src emacs-lisp
+(use-package cape
+  :bind (("C-c p p" . completion-at-point)
+         ("C-c p t" . complete-tag)
+         ("C-c p d" . cape-dabbrev)
+         ("C-c p h" . cape-history)
+         ("C-c p f" . cape-file)
+         ("C-c p k" . cape-keyword)
+         ("C-c p s" . cape-symbol)
+         ("C-c p a" . cape-abbrev)
+         ("C-c p i" . cape-ispell)
+         ("C-c p l" . cape-line)
+         ("C-c p w" . cape-dict)
+         ("C-c p \\" . cape-tex)
+         ("C-c p _" . cape-tex)
+         ("C-c p ^" . cape-tex)
+         ("C-c p &" . cape-sgml)
+         ("C-c p r" . cape-rfc1345))
   :init
-  (setq completion-styles '(orderless)
-        completion-category-defaults nil
-        completion-category-overrides '((file (styles . (partial-completion))))))
+  (add-to-list 'completion-at-point-functions #'cape-dabbrev)
+  (add-to-list 'completion-at-point-functions #'cape-file)
+  ;;(add-to-list 'completion-at-point-functions #'cape-history)
+  ;;(add-to-list 'completion-at-point-functions #'cape-keyword)
+  ;;(add-to-list 'completion-at-point-functions #'cape-tex)
+  ;;(add-to-list 'completion-at-point-functions #'cape-sgml)
+  ;;(add-to-list 'completion-at-point-functions #'cape-rfc1345)
+  ;;(add-to-list 'completion-at-point-functions #'cape-abbrev)
+  ;;(add-to-list 'completion-at-point-functions #'cape-ispell)
+  ;;(add-to-list 'completion-at-point-functions #'cape-dict)
+  ;;(add-to-list 'completion-at-point-functions #'cape-symbol)
+  ;;(add-to-list 'completion-at-point-functions #'cape-line)
+)
+#+end_src
 
+** ICONS FOR COMPLETION
+#+begin_src emacs-lisp
 (use-package kind-icon
   :ensure t
   :after corfu
   :custom
-  (kind-icon-default-face 'corfu-default) ; to compute blended backgrounds correctly
+  (kind-icon-default-face 'corfu-default)
   :config
   (add-to-list 'corfu-margin-formatters #'kind-icon-margin-formatter))
+#+end_src
 
-(use-package cape
-  :defer t
-  :init
-  (add-to-list 'completion-at-point-functions #'cape-file-capf)
-  (add-to-list 'completion-at-point-functions #'cape-dabbrev-capf)
-  (add-to-list 'completion-at-point-functions #'cape-keyword-capf))
-
-(setq completion-cycle-threshold 1)
-
-;; Enable indentation+completion using the TAB key.
-;; Completion is often bound to M-TAB.
-(setq tab-always-indent 'complete)
-
-;; Dirty hack to get c completion running
-;; Discussion in https://github.com/minad/corfu/issues/34
-(when (equal tab-always-indent 'complete)
-  (map! :map c-mode-base-map
-        :i [remap c-indent-line-or-region] #'completion-at-point))
-
+** COMPLETION ANNOTATIONS WITH MARGINALIA | COMPLETION ACTIONS WITH EMBARK
+#+begin_src emacs-lisp
 (use-package marginalia
   :ensure t
+  :custom
+  (marginalia-annotators '(marginalia-annonators-heavy marginalia-annotators-light nil))
   :config
   (marginalia-mode))
 
 (use-package embark
   :ensure t
+
   :bind
   (("C-." . embark-act)
    ("C-;" . embark-dwim)
    ("C-h B" . embark-bindings))
+
   :init
+
   (setq prefix-help-command #'embark-prefix-help-command)
+
   :config
+
   (add-to-list 'display-buffer-alist
                '("\\`\\*Embark Collect \\(Live\\|Completions\\)\\*"
                  nil
@@ -227,13 +224,78 @@ Automatically tangle when saving ~.org~ files
 
 (use-package embark-consult
   :ensure t
-  :after (embark consult)
-  :demand t
   :hook
   (embark-collect-mode . consult-preview-at-point-mode))
+#+end_src
+
+** VERTICO
+#+begin_src emacs-lisp
+(use-package vertico
+  :ensure t
+  :demand
+  :config
+  (setq vertico-cycle t)
+  (setq vertico-preselect 'directory)
+  :init
+  (vertico-mode)
+  (defun my/vertico-insert ()
+    (interactive)
+    (let* ((mb (minibuffer-contents-no-properties))
+           (lc (if (string= mb "") mb (substring mb -1))))
+      (cond ((string-match-p "^[/~:]" lc) (self-insert-command 1 ?/))
+            ((file-directory-p (vertico--candidate)) (vertico-insert))
+            (t (self-insert-command 1 ?/)))))
+  :bind (:map vertico-map
+              ("/" . #'my/vertico-insert)))
+
+(use-package vertico-directory
+  :after vertico
+  :ensure t
+  :demand
+  :bind (:map vertico-map
+              ("RET"   . vertico-directory-enter)
+              ("DEL"   . vertico-directory-delete-char)
+              ("M-DEL" . vertico-directory-delete-word))
+  :hook (rfn-eshadow-update-overlay . vertico-directory-tidy))
+#+end_src
+
+** LSP-MODE WITH CORFU
+#+begin_src emacs-lisp
+(use-package orderless
+  :init
+  (setq completion-styles '(orderless partial-completion basic)
+        completion-category-defaults nil
+        completion-category-overrides nil))
+
+(use-package lsp-mode
+  :custom
+  (lsp-completion-provider :none)
+
+  :init
+  (defun my/orderless-dispatch-flex-first (_pattern index _total)
+    (and (eq index 0) 'orderless-flex))
+
+  (defun my/lsp-mode-setup-completion ()
+    (setf (alist-get 'styles (alist-get 'lsp-capf completion-category-defaults))
+          '(orderless)))
+
+  (add-hook 'orderless-style-dispatchers #'my/orderless-dispatch-flex-first nil 'local)
+
+  (setq-local completion-at-point-functions (list (cape-capf-buster #'lsp-completion-at-point)))
+
+  :hook
+  (lsp-completion-mode . my/lsp-mode-setup-completion))
 
 ;; LSP for solidity
 (require 'solidity-mode)
+#+end_src
+
+** MINIBUFFER
+#+begin_src emacs-lisp
+(use-package savehist
+  :config
+  (setq history-length 25)
+  (savehist-mode 1))
 #+end_src
 
 ** LATEX
