--- a/macos/doom/config.org
+++ b/macos/doom/config.org
@@ -11,21 +11,16 @@
   - [[#about][ABOUT]]
   - [[#fonts][FONTS]]
   - [[#themes][THEMES]]
-  - [[#all-the-icon][ALL-THE-ICON]]
   - [[#dashboard][DASHBOARD]]
+  - [[#all-the-icon][ALL-THE-ICON]]
   - [[#beacon][BEACON]]
   - [[#line-numbers][LINE NUMBERS]]
   - [[#org-directory][ORG DIRECTORY]]
   - [[#org-auto-tangle][ORG-AUTO-TANGLE]]
   - [[#environment-variables-for-mac][ENVIRONMENT VARIABLES FOR MAC]]
   - [[#flycheck][FLYCHECK]]
-  - [[#completion-in-region-with-corfu][COMPLETION IN REGION WITH CORFU]]
-  - [[#completion-at-point-extension-with-cape][COMPLETION AT POINT EXTENSION WITH CAPE]]
+  - [[#completion][COMPLETION]]
   - [[#icons-for-completion][ICONS FOR COMPLETION]]
-  - [[#completion-annotations-with-marginalia--completion-actions-with-embark][COMPLETION ANNOTATIONS WITH MARGINALIA | COMPLETION ACTIONS WITH EMBARK]]
-  - [[#vertico][VERTICO]]
-  - [[#lsp-mode-with-corfu][LSP-MODE WITH CORFU]]
-  - [[#minibuffer][MINIBUFFER]]
   - [[#latex][LATEX]]
 
 ** TL;DR
@@ -45,27 +40,27 @@ Personal DOOM EMACS config
 
 ** THEMES
 #+begin_src emacs-lisp
-(setq doom-theme 'doom-zenburn)
-(setq zenburn-use-variable-pitch t)
-(setq zenburn-scale-org-headlines t)
-(setq zenburn-scale-outline-headlines t)
-#+end_src
-
-** ALL-THE-ICON
-#+begin_src emacs-lisp
-(all-the-icons-completion-mode)
-(add-hook 'marginalia-mode-hook #' all-the-icons-completion-marginalia-setup)
+(setq doom-theme 'doom-gruvbox)
+;(setq doom-theme 'doom-zenburn)
+;;(setq zenburn-use-variable-pitch t)
+;;(setq zenburn-scale-org-headlines t)
+;;(setq zenburn-scale-outline-headlines t)
 #+end_src
 
 ** DASHBOARD
 #+begin_src emacs-lisp
-(remove-hook '+doom-dashboard-functions #'doom-gashboard-widget-shortmenu)
-(add-hook! '+doom-dashboard-functions :append
-           (setq-hook! '+doom-dashboard-mode-hook evil-normal-state-cursor (list nil))
-           (setq fancy-splash-image (concat doom-user-dir "cacochan.png")))
+;;(remove-hook '+doom-dashboard-functions #'doom-dashboard-widget-shortmenu)
+;;(add-hook! '+doom-dashboard-functions :append
+;;           (setq-hook! '+doom-dashboard-mode-hook evil-normal-state-cursor (list t))
+;;           (setq fancy-splash-image (concat doom-user-dir "cacochan.png")))
+#+end_src
 
-;; EMACSCLIENT
-
+** ALL-THE-ICON
+#+begin_src emacs-lisp
+(use-package all-the-icons-dired
+     :hook
+     (dired-mode . all-the-icons-dired-mode)
+     (marginalia-mode . all-the-icons-completion-marginalia-setup))
 #+end_src
 
 ** BEACON
@@ -83,6 +78,7 @@ Personal DOOM EMACS config
 (setq org-directory "~/Documents/OrgFiles/"
       org-agenda-files '("~/Documents/OrgFiles/agenda.org"))
 (setq org-agenda-block-separator 45)
+(setq org-log-done t)
 
 (setq org-src-preserve-indentation nil
       org-src-tab-acts-natively t
@@ -120,7 +116,76 @@ Automatically tangle when saving ~.org~ files
   :init (global-flycheck-mode))
 #+end_src
 
-** COMPLETION IN REGION WITH CORFU
+** COMPLETION
+*** VERTICO
+#+begin_src emacs-lisp
+(use-package vertico
+  :ensure t
+  :config
+  (setq vertico-cycle t)
+  (setq vertico-preselect 'directory)
+  :init
+  (vertico-mode)
+  (defun my/vertico-insert ()
+    (interactive)
+    (let* ((mb (minibuffer-contents-no-properties))
+           (lc (if (string= mb "") mb (substring mb -1))))
+      (cond ((string-match-p "^[/~:]" lc) (self-insert-command 1 ?/))
+            ((file-directory-p (vertico--candidate)) (vertico-insert))
+            (t (self-insert-command 1 ?/)))))
+  :bind (:map vertico-map
+              ("/" . #'my/vertico-insert)))
+
+(use-package savehist
+  :init
+  (savehist-mode))
+
+(use-package orderless
+  :init
+  (setq completion-styles '(orderless basic)
+        completion-category-defaults nil
+        completion-category-overrides '((file) (styles-partial-completion))))
+
+(use-package vertico-directory
+  :after vertico
+  :ensure nil
+  :bind (:map vertico-map
+              ("RET"   . vertico-directory-enter)
+              ("DEL"   . vertico-directory-delete-char)
+              ("M-DEL" . vertico-directory-delete-word))
+  :hook (rfn-eshadow-update-overlay . vertico-directory-tidy))
+#+end_src
+
+*** COMPLETION ANNOTATIONS WITH MARGINALIA | COMPLETION ACTIONS WITH EMBARK
+#+begin_src emacs-lisp
+(use-package marginalia
+  :ensure t
+  :custom
+  (marginalia-annotators '(marginalia-annonators-heavy marginalia-annotators-light nil))
+  :config
+  (marginalia-mode))
+
+(use-package embark
+  :ensure t
+  :bind
+  (("C-." . embark-act)
+   ("C-;" . embark-dwim)
+   ("C-h B" . embark-bindings))
+  :init
+  (setq prefix-help-command #'embark-prefix-help-command)
+  :config
+  (add-to-list 'display-buffer-alist
+               '("\\`\\*Embark Collect \\(Live\\|Completions\\)\\*"
+                 nil
+                 (window-parameters (mode-line-format . none)))))
+
+(use-package embark-consult
+  :ensure t
+  :hook
+  (embark-collect-mode . consult-preview-at-point-mode))
+#+end_src
+
+*** COMPLETION IN REGION WITH CORFU
 #+begin_src emacs-lisp
 (use-package corfu
   :custom
@@ -148,7 +213,18 @@ Automatically tangle when saving ~.org~ files
   (global-corfu-mode))
 #+end_src
 
-** COMPLETION AT POINT EXTENSION WITH CAPE
+** ICONS FOR COMPLETION
+#+begin_src emacs-lisp
+(use-package kind-icon
+  :ensure t
+  :after corfu
+  :custom
+  (kind-icon-default-face 'corfu-default)
+  :config
+  (add-to-list 'corfu-margin-formatters #'kind-icon-margin-formatter))
+#+end_src
+
+*** COMPLETION AT POINT EXTENSION WITH CAPE
 #+begin_src emacs-lisp
 (use-package cape
   :bind (("C-c p p" . completion-at-point)
@@ -169,104 +245,11 @@ Automatically tangle when saving ~.org~ files
          ("C-c p r" . cape-rfc1345))
   :init
   (add-to-list 'completion-at-point-functions #'cape-dabbrev)
-  (add-to-list 'completion-at-point-functions #'cape-file)
-  ;;(add-to-list 'completion-at-point-functions #'cape-history)
-  ;;(add-to-list 'completion-at-point-functions #'cape-keyword)
-  ;;(add-to-list 'completion-at-point-functions #'cape-tex)
-  ;;(add-to-list 'completion-at-point-functions #'cape-sgml)
-  ;;(add-to-list 'completion-at-point-functions #'cape-rfc1345)
-  ;;(add-to-list 'completion-at-point-functions #'cape-abbrev)
-  ;;(add-to-list 'completion-at-point-functions #'cape-ispell)
-  ;;(add-to-list 'completion-at-point-functions #'cape-dict)
-  ;;(add-to-list 'completion-at-point-functions #'cape-symbol)
-  ;;(add-to-list 'completion-at-point-functions #'cape-line)
-)
+  (add-to-list 'completion-at-point-functions #'cape-file))
 #+end_src
 
-** ICONS FOR COMPLETION
+*** LSP-MODE WITH CORFU
 #+begin_src emacs-lisp
-(use-package kind-icon
-  :ensure t
-  :after corfu
-  :custom
-  (kind-icon-default-face 'corfu-default)
-  :config
-  (add-to-list 'corfu-margin-formatters #'kind-icon-margin-formatter))
-#+end_src
-
-** COMPLETION ANNOTATIONS WITH MARGINALIA | COMPLETION ACTIONS WITH EMBARK
-#+begin_src emacs-lisp
-(use-package marginalia
-  :ensure t
-  :custom
-  (marginalia-annotators '(marginalia-annonators-heavy marginalia-annotators-light nil))
-  :config
-  (marginalia-mode))
-
-(use-package embark
-  :ensure t
-
-  :bind
-  (("C-." . embark-act)
-   ("C-;" . embark-dwim)
-   ("C-h B" . embark-bindings))
-
-  :init
-
-  (setq prefix-help-command #'embark-prefix-help-command)
-
-  :config
-
-  (add-to-list 'display-buffer-alist
-               '("\\`\\*Embark Collect \\(Live\\|Completions\\)\\*"
-                 nil
-                 (window-parameters (mode-line-format . none)))))
-
-(use-package embark-consult
-  :ensure t
-  :hook
-  (embark-collect-mode . consult-preview-at-point-mode))
-#+end_src
-
-** VERTICO
-#+begin_src emacs-lisp
-(use-package vertico
-  :ensure t
-  :demand
-  :config
-  (setq vertico-cycle t)
-  (setq vertico-preselect 'directory)
-  :init
-  (vertico-mode)
-  (defun my/vertico-insert ()
-    (interactive)
-    (let* ((mb (minibuffer-contents-no-properties))
-           (lc (if (string= mb "") mb (substring mb -1))))
-      (cond ((string-match-p "^[/~:]" lc) (self-insert-command 1 ?/))
-            ((file-directory-p (vertico--candidate)) (vertico-insert))
-            (t (self-insert-command 1 ?/)))))
-  :bind (:map vertico-map
-              ("/" . #'my/vertico-insert)))
-
-(use-package vertico-directory
-  :after vertico
-  :ensure t
-  :demand
-  :bind (:map vertico-map
-              ("RET"   . vertico-directory-enter)
-              ("DEL"   . vertico-directory-delete-char)
-              ("M-DEL" . vertico-directory-delete-word))
-  :hook (rfn-eshadow-update-overlay . vertico-directory-tidy))
-#+end_src
-
-** LSP-MODE WITH CORFU
-#+begin_src emacs-lisp
-(use-package orderless
-  :init
-  (setq completion-styles '(orderless partial-completion basic)
-        completion-category-defaults nil
-        completion-category-overrides nil))
-
 (use-package lsp-mode
   :custom
   (lsp-completion-provider :none)
@@ -288,14 +271,6 @@ Automatically tangle when saving ~.org~ files
 
 ;; LSP for solidity
 (require 'solidity-mode)
-#+end_src
-
-** MINIBUFFER
-#+begin_src emacs-lisp
-(use-package savehist
-  :config
-  (setq history-length 25)
-  (savehist-mode 1))
 #+end_src
 
 ** LATEX
