--- a/macos/doom/config.org
+++ b/macos/doom/config.org
@@ -40,7 +40,8 @@ Personal DOOM EMACS config
 ** FONTS
 #+begin_src emacs-lisp
 (setq doom-font (font-spec :family "Iosevka Nerd Font" :size 12 :weight 'semi-light)
-      doom-variable-pitch-font (font-spec :family "Iosevka Nerd Font" :size 13))
+      doom-variable-pitch-font (font-spec :family "Iosevka Nerd Font" :size 12)
+      doom-big-font (font-spec :family "Iosevka Nerd Font" :size 15))
 #+end_src
 
 ** THEMES
@@ -50,10 +51,7 @@ Personal DOOM EMACS config
 
 ** DASHBOARD
 #+begin_src emacs-lisp
-;;(remove-hook '+doom-dashboard-functions #'doom-dashboard-widget-shortmenu)
-;;(add-hook! '+doom-dashboard-functions :append
-;;           (setq-hook! '+doom-dashboard-mode-hook evil-normal-state-cursor (list t))
-;;           (setq fancy-splash-image (concat doom-user-dir "cacochan.png")))
+(setq fancy-splash-image (concat doom-user-dir "doom-emacs-gray.svg"))
 #+end_src
 
 ** CENTAUR TABS
@@ -76,8 +74,13 @@ Personal DOOM EMACS config
 
 ** ALL THE ICONS
 #+begin_src emacs-lisp
-(all-the-icons-completion-mode)
-(add-hook 'marginalia-mode-hook #'all-the-icons-completion-marginalia-setup)
+(use-package all-the-icons-completion
+  :after
+  (marginalia all-the-icons)
+  :hook
+  (marginalia-mode . all-the-icons-completion-marginalia-setup)
+  :init
+  (all-the-icons-completion-mode))
 #+end_src
 
 ** BEACON
@@ -135,8 +138,7 @@ Growl-work-alike for Emacs
 (use-package org-superstar
   :config
   (setq org-superstar-leading-bullet " ")
-  (setq org-superstar-special-todo-items t) ;; checkboxes for todo items
-  )
+  (setq org-superstar-special-todo-items t))
 #+end_src
 
 ** ORG-AUTO-TANGLE
@@ -174,32 +176,24 @@ Automatically tangle when saving ~.org~ files
 *** VERTICO
 #+begin_src emacs-lisp
 (use-package vertico
-  :ensure t
+  :custom
+  (vertico-count 20)
+  (vertico-resize t)
+  (vertico-cycle nil)
   :config
-  (setq vertico-cycle t)
-  (setq vertico-preselect 'directory)
-  :init
-  (vertico-mode)
-
-  (defun my/vertico-insert ()
-    (interactive)
-    (let* ((mb (minibuffer-contents-no-properties))
-           (lc (if (string= mb "") mb (substring mb -1))))
-      (cond ((string-match-p "^[/~:]" lc) (self-insert-command 1 ?/))
-            ((file-directory-p (vertico--candidate)) (vertico-insert))
-            (t (self-insert-command 1 ?/)))))
-  :bind (:map vertico-map
-              ("/" . #'my/vertico-insert)))
+  (vertico-mode))
 
 (use-package savehist
   :init
   (savehist-mode))
 
 (use-package orderless
-  :init
-  (setq completion-styles '(orderless basic)
-        completion-category-defaults nil
-        completion-category-overrides '((file) (styles-partial-completion))))
+  :custom
+  (completion-styles '(orderless))
+  (completion-category-defaults nil)
+  (completion-category-overrides
+   '((file (styles basic-remote
+                   orderless)))))
 
 (use-package vertico-directory
   :after vertico
@@ -228,26 +222,35 @@ Automatically tangle when saving ~.org~ files
 (use-package marginalia
   :ensure t
   :custom
-  (marginalia-annotators '(marginalia-annonators-heavy marginalia-annotators-light nil))
-  :config
+  (marginalia-maxrelative-age 0)
+  (marginalia-align 'right)
+  :init
   (marginalia-mode))
 
 (use-package embark
   :ensure t
+
   :bind
-  (("C-." . embark-act)
+  (("C-a" . embark-act)         ;; Doom Emacs (SPC a)
    ("C-;" . embark-dwim)
-   ("C-h B" . embark-bindings))
+   ("C-h B" . embark-bindings)) ;; alternative for `describe-bindings' Doom Emacs (SPC h b)
+
   :init
+
+  ;; Optionally replace the key help with a completing-read interface
   (setq prefix-help-command #'embark-prefix-help-command)
+
   :config
+
+  ;; Hide the mode line of the Embark live/completions buffers
   (add-to-list 'display-buffer-alist
                '("\\`\\*Embark Collect \\(Live\\|Completions\\)\\*"
                  nil
                  (window-parameters (mode-line-format . none)))))
 
+;; Consult users will also want the embark-consult package.
 (use-package embark-consult
-  :ensure t
+  :ensure t ; only need to install it, embark loads it after consult if found
   :hook
   (embark-collect-mode . consult-preview-at-point-mode))
 #+end_src
@@ -258,26 +261,14 @@ Automatically tangle when saving ~.org~ files
   :custom
   (corfu-cycle t)
   (corfu-auto t)
-  (corfu-auto-prefix 2)
-  (corfu-auto-delay 0.0)
-  (corfu-echo-documentation 0.25)
-  (corfu-separator ?\s)
-  (corfu-preview-current 'insert)
-  (corfu-on-exact-match nil)
   (corfu-quit-no-match 'separator)
-  (corfu-preselect-first nil)
-  :hook
-  (doom-first-buffer . global-corfu-mode)
-  :bind (:map corfu-map
-         ("SPC" . corfu-insert-separator)
-         ("TAB" . corfu-next)
-         ([tab] . corfu-next)
-         ("S-TAB" . corfu-previous)
-         ([backtab] . corfu-previous)
-         ("S-<return>" . corfu-insert)
-         ("RET" . nil))
   :init
   (global-corfu-mode))
+
+(use-package emacs
+  :init
+  (setq completion-cycle-threshold 3)
+  (setq tab-always-indent 'complete))
 #+end_src
 
 *** KIND-ICON
@@ -294,22 +285,6 @@ Automatically tangle when saving ~.org~ files
 *** CAPE
 #+begin_src emacs-lisp
 (use-package cape
-  :bind (("C-c p p" . completion-at-point)
-         ("C-c p t" . complete-tag)
-         ("C-c p d" . cape-dabbrev)
-         ("C-c p h" . cape-history)
-         ("C-c p f" . cape-file)
-         ("C-c p k" . cape-keyword)
-         ("C-c p s" . cape-symbol)
-         ("C-c p a" . cape-abbrev)
-         ("C-c p i" . cape-ispell)
-         ("C-c p l" . cape-line)
-         ("C-c p w" . cape-dict)
-         ("C-c p \\" . cape-tex)
-         ("C-c p _" . cape-tex)
-         ("C-c p ^" . cape-tex)
-         ("C-c p &" . cape-sgml)
-         ("C-c p r" . cape-rfc1345))
   :init
   (add-to-list 'completion-at-point-functions #'cape-dabbrev)
   (add-to-list 'completion-at-point-functions #'cape-file))
@@ -319,14 +294,15 @@ Automatically tangle when saving ~.org~ files
 #+begin_src emacs-lisp
 (use-package lsp-mode
   :custom
-  (lsp-completion-provider :none)
+  (lsp-completion-provider :none)    ;; corfu is used
 
   :init
   (defun my/orderless-dispatch-flex-first (_pattern index _total)
     (and (eq index 0) 'orderless-flex))
 
   (defun my/lsp-mode-setup-completion ()
-    (setf (alist-get 'styles (alist-get 'lsp-capf completion-category-defaults))
+    (setf (alist-get 'styles
+                     (alist-get 'lsp-capf completion-category-defaults))
           '(orderless)))
 
   (add-hook 'orderless-style-dispatchers #'my/orderless-dispatch-flex-first nil 'local)
